--- a/Full Stack Code/frontend/index.html
+++ b/Full Stack Code/frontend/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="src\assets\uphillll_rounded.png" />
+    <link rel="icon" type="image/svg+xml" href="\assets\uphillll_rounded.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Journey</title>
   </head>
